# rpi-kernel

./: .clangd  .gitignore  BOOT  CMakeLists.txt  Makefile  README.md
cmake/: toolchain_config.cmake
src/: CMakeLists.txt  linker.ld  main.c  startup.c  stubs.c  uart.c  uart.h
src/memory_map/: memory.c  memory.h  phys_memory_map.h  virt_memory_map.h
